output.txt
    Checking hardware_monitor v0.1.0 (C:\Users\will\thenozzle\hardware_monitor)
error[E0432]: unresolved import `windows_sys::Win32::System::Performance::PDH_FMT_COUNTER_VALUE`
 --> src\main.rs:9:5
  |
9 |     PDH_FMT_COUNTER_VALUE, PDH_FMT_DOUBLE,
  |     ^^^^^^^^^^^^^^^^^^^^^
  |     |
  |     no `PDH_FMT_COUNTER_VALUE` in `Win32::System::Performance`
  |     help: a similar name exists in the module: `PDH_FMT_COUNTERVALUE`

warning: unused imports: `PdhAddCounterW`, `PdhCollectQueryData`, `PdhGetFormattedCounterValue`, and `PdhOpenQueryW`
 --> src\main.rs:8:18
  |
8 |     self as pdh, PdhAddCounterW, PdhCollectQueryData, PdhGetFormattedCounterValue, PdhOpenQueryW,
  |                  ^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0432`.
warning: `hardware_monitor` (bin "hardware_monitor") generated 1 warning
error: could not compile `hardware_monitor` (bin "hardware_monitor") due to 1 previous error; 1 warning emitted
